Revert "Begin using quay.io"
Quay has been less reliable than Docker Hub for both
pulling and pushing images.

This reverts commit 27dc8dec267df703a57c3fdae91a5543dfa26eac.

Pull request #721
Approved-by: Viswajith Venugopal <vv@stackrox.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ defaults: &defaults
     # This image is the standard circleci/golang:1.10.3 image, plus bazel and
     # other necessary build tools like goimports, dep, yarn, gcloud, kubectl,
     # oc, envsubst and gradle.
-    - image: quay.io/stackrox/apollo-ci:0.1.11-3-g0e8e67bf53
+    - image: docker.io/stackrox/apollo-ci:0.1.11-3-g0e8e67bf53
       auth:
-        username: $QUAY_USERNAME
-        password: $QUAY_PASSWORD
+        username: $DOCKERHUB_USERNAME
+        password: $DOCKERHUB_PASSWORD
   working_directory: /go/src/bitbucket.org/stack-rox/apollo
 
 restoreUI: &restoreUI
@@ -52,20 +52,12 @@ jobs:
       - run:
           name: Push new Docker image
           command: |
-            docker login -u $QUAY_USERNAME -p $QUAY_PASSWORD quay.io
             docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD docker.io
 
             export TAG=$(git describe --tags --abbrev=10 --dirty)
 
-            docker push docker.io/stackrox/prevent:$TAG | cat
-
-            docker tag docker.io/stackrox/prevent:$TAG quay.io/stackrox/prevent:$TAG
-            docker push quay.io/stackrox/prevent:$TAG | cat
-
-            docker push docker.io/stackrox/prevent-health:$TAG | cat
-
-            docker tag docker.io/stackrox/prevent-health:$TAG  quay.io/stackrox/prevent-health:$TAG
-            docker push quay.io/stackrox/prevent-health:$TAG | cat
+            docker push stackrox/prevent:$TAG | cat
+            docker push stackrox/prevent-health:$TAG | cat
 
       - run:
           name: Run style checks and unit tests
@@ -108,11 +100,10 @@ jobs:
       - run:
           name: Setup deployment env
           command: |
-            docker login -u "$QUAY_USERNAME" -p "$QUAY_PASSWORD" quay.io
-            echo 'export REGISTRY_USERNAME="$QUAY_USERNAME"' >> $BASH_ENV
-            echo 'export REGISTRY_PASSWORD="$QUAY_PASSWORD"' >> $BASH_ENV
+            docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
+            echo 'export REGISTRY_USERNAME="$DOCKERHUB_USERNAME"' >> $BASH_ENV
+            echo 'export REGISTRY_PASSWORD="$DOCKERHUB_PASSWORD"' >> $BASH_ENV
             echo 'export PREVENT_IMAGE_TAG="$(git describe --tags --abbrev=10 --dirty)"' >> $BASH_ENV
-            echo 'export PREVENT_IMAGE="quay.io/stackrox/prevent:$(git describe --tags --abbrev=10 --dirty)"' >> $BASH_ENV
             echo $GKE_SERVICE_ACCOUNT > /tmp/gcp.json
             echo 'export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp.json' >> $BASH_ENV
             gcloud auth activate-service-account --key-file /tmp/gcp.json
@@ -403,17 +394,17 @@ jobs:
       - run:
           name: Push image into stackrox.io
           command: |
-            docker login -u "$QUAY_USERNAME" -p "$QUAY_PASSWORD" quay.io
+            docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD"
             docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_PASSWORD" stackrox.io
 
             export TAG=$(git describe --tags --abbrev=10 --dirty)
 
-            docker pull quay.io/stackrox/prevent:$TAG
-            docker tag quay.io/stackrox/prevent:$TAG stackrox.io/prevent:$TAG
+            docker pull docker.io/stackrox/prevent:$TAG
+            docker tag docker.io/stackrox/prevent:$TAG stackrox.io/prevent:$TAG
             docker push stackrox.io/prevent:$TAG | cat
 
-            docker pull quay.io/stackrox/prevent-health:$TAG
-            docker tag quay.io/stackrox/prevent-health:$TAG stackrox.io/prevent-health:$TAG
+            docker pull docker.io/stackrox/prevent-health:$TAG
+            docker tag docker.io/stackrox/prevent-health:$TAG stackrox.io/prevent-health:$TAG
             docker push stackrox.io/prevent-health:$TAG | cat
 
 
