ROX-2428 - Bundle StackRox as an Application for GCP Marketplace (stackrox/rox#2490)

--- a/image/templates/kubernetes/helm/centralchart/templates/default-tls-cert-secret.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/default-tls-cert-secret.yaml
@@ -5,6 +5,8 @@ type: kubernetes.io/tls
 metadata:
   name: central-default-tls-cert
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
   annotations:
     "helm.sh/hook": "pre-install"
 {{ toYaml .Values.secrets.defaulttlscert }}
