--- a/image/templates/kubernetes/helm/centralchart/templates/license-secret.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/license-secret.yaml
@@ -5,6 +5,8 @@ type: Opaque
 metadata:
   name: central-license
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
   annotations:
     "helm.sh/hook": "pre-install"
 {{toYaml .Values.secrets.centrallicense }}
