--- a/image/templates/kubernetes/helm/centralchart/templates/pvc.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/pvc.yaml
@@ -4,6 +4,8 @@ apiVersion: v1
 metadata:
   name: {{.Values.persistence.name}}
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 spec:
   {{if .Values.persistence.storageClass -}}
   storageClassName: {{.Values.persistence.storageClass}}
