--- a/image/templates/kubernetes/helm/monitoringchart/templates/telegraf-proxy.yaml
+++ b/image/templates/kubernetes/helm/monitoringchart/templates/telegraf-proxy.yaml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   name: telegraf-proxy
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 data:
   telegraf.conf: |-
     # Telegraf Configuration
