--- a/image/templates/kubernetes/helm/scannerchart/templates/networkpolicy.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/templates/networkpolicy.yaml
@@ -3,6 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: scanner
   namespace: stackrox
+  labels:
+    app.kubernetes.io/name: stackrox
 spec:
   ingress:
   - from:
