--- a/image/templates/openshift/kubectl/sensor-rbac.yaml
+++ b/image/templates/openshift/kubectl/sensor-rbac.yaml
@@ -3,6 +3,8 @@ kind: ServiceAccount
 metadata:
   name: sensor
   namespace: stackrox
+  labels:
+    app.kubernetes.io/name: stackrox
 imagePullSecrets:
 - name: stackrox
 ---
@@ -11,6 +13,8 @@ kind: ServiceAccount
 metadata:
   name: benchmark
   namespace: stackrox
+  labels:
+    app.kubernetes.io/name: stackrox
 imagePullSecrets:
 - name: stackrox
 ---
@@ -20,6 +24,8 @@ kind: ServiceAccount
 metadata:
   name: collector
   namespace: stackrox
+  labels:
+    app.kubernetes.io/name: stackrox
 imagePullSecrets:
 - name: stackrox
 - name: stackrox-collector
@@ -29,6 +35,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: stackrox:monitor-deployments
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
   - resources:
     - cronjobs
@@ -54,6 +62,8 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: stackrox:monitor-deployments-binding
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -67,6 +77,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: stackrox:enforce-policies
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
   - resources:
     - cronjobs
@@ -91,6 +103,8 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: stackrox:enforce-policies-binding
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -105,6 +119,8 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: stackrox:launch-benchmarks
   namespace: stackrox
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
   - resources:
     - daemonsets
@@ -122,6 +138,8 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: stackrox:launch-benchmarks-binding
   namespace: stackrox
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -135,6 +153,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:network-policies
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
   - resources:
     - networkpolicies
@@ -153,6 +173,8 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:network-policies-binding
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -166,6 +188,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:view-nodes
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
 - resources:
   - nodes
@@ -179,6 +203,8 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:view-nodes-binding
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -192,6 +218,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:create-events
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
 - resources:
   - events
@@ -203,6 +231,8 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:create-events-binding
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -216,6 +246,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:update-namespaces
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
   - resources:
       - namespaces
@@ -227,6 +259,8 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:update-namespaces-binding
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
   - kind: ServiceAccount
     name: sensor
@@ -240,6 +274,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:view-rbac
+  labels:
+    app.kubernetes.io/name: stackrox
 rules:
   - resources:
       - roles
@@ -259,6 +295,8 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: stackrox:view-rbac-binding
+  labels:
+    app.kubernetes.io/name: stackrox
 subjects:
   - kind: ServiceAccount
     name: sensor
@@ -274,6 +312,8 @@ metadata:
   annotations:
     kubernetes.io/description: sensor is the security constraint for the sensor server
   name: sensor
+  labels:
+    app.kubernetes.io/name: stackrox
 users:
 - system:serviceaccount:stackrox:sensor
 priority: 100
@@ -290,6 +330,8 @@ metadata:
   annotations:
     kubernetes.io/description: benchmark is the security constraint for the benchmark container
   name: benchmark
+  labels:
+    app.kubernetes.io/name: stackrox
 users:
 - system:serviceaccount:stackrox:benchmark
 priority: 100
@@ -311,6 +353,8 @@ metadata:
   annotations:
     kubernetes.io/description: This SCC is based on privileged, hostaccess, and hostmount-anyuid
   name: collector
+  labels:
+    app.kubernetes.io/name: stackrox
 users:
 - system:serviceaccount:stackrox:collector
 allowHostDirVolumePlugin: true
