--- a/image/templates/kubernetes/helm/centralchart/templates/loadbalancer.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/loadbalancer.yaml
@@ -4,6 +4,8 @@ kind: Route
 metadata:
   name: central
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 spec:
   port:
     targetPort: https
@@ -18,6 +20,8 @@ kind: Route
 metadata:
   name: central-mtls
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 spec:
   host: central.{{.Values.namespace}}
   port:
@@ -33,6 +37,8 @@ kind: Service
 metadata:
   name: central-loadbalancer
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 spec:
   ports:
   - port: {{.Values.exposure.port}}
