--- a/image/templates/kubernetes/helm/centralchart/templates/tls-secret.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/tls-secret.yaml
@@ -4,6 +4,8 @@ type: Opaque
 metadata:
   name: central-tls
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
   annotations:
     "helm.sh/hook": "pre-install"
 {{toYaml .Values.secrets.tls}}
