--- a/image/templates/kubernetes/helm/monitoringchart/templates/secret.yaml
+++ b/image/templates/kubernetes/helm/monitoringchart/templates/secret.yaml
@@ -4,6 +4,8 @@ type: Opaque
 metadata:
   name: monitoring
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
   annotations:
     "helm.sh/hook": "pre-install"
 {{toYaml .Values.secrets}}
