--- a/image/templates/kubernetes/helm/monitoringchart/templates/serviceaccount.yaml
+++ b/image/templates/kubernetes/helm/monitoringchart/templates/serviceaccount.yaml
@@ -3,6 +3,8 @@ kind: ServiceAccount
 metadata:
   name: monitoring
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 imagePullSecrets:
 - name: stackrox
 ---
@@ -13,6 +15,8 @@ metadata:
   annotations:
     kubernetes.io/description: monitoring is the security constraint for the monitoring stack
   name: monitoring
+  labels:
+    app.kubernetes.io/name: stackrox
 priority: 100
 runAsUser:
   type: RunAsAny
