--- a/image/templates/kubernetes/helm/scannerchart/templates/service.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/templates/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: scanner
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 spec:
   ports:
   - name: http-clairify
