--- a/image/templates/kubernetes/helm/scannerchart/templates/serviceaccount.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/templates/serviceaccount.yaml
@@ -3,6 +3,8 @@ kind: ServiceAccount
 metadata:
   name: scanner
   namespace: {{.Values.namespace}}
+  labels:
+    app.kubernetes.io/name: stackrox
 imagePullSecrets:
 - name: {{.Values.scannerSecretName}}
 ---
@@ -13,6 +15,8 @@ metadata:
   annotations:
     kubernetes.io/description: scanner is the security constraint for the Scanner container
   name: scanner
+  labels:
+    app.kubernetes.io/name: stackrox
 priority: 100
 runAsUser:
   type: RunAsAny
