--- a/image/templates/kubernetes/kubectl/sensor-rbac.yaml
+++ b/image/templates/kubernetes/kubectl/sensor-rbac.yaml
@@ -169,6 +169,7 @@ rules:
   apiGroups: [""]
   verbs:
   - create
+  - list
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
