Replace docker.IsContainerized with a more robust alternative: an injected env variable (stackrox/rox#2596)

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -19,6 +19,8 @@ RUN apk update && \
 
 ENV PATH="/stackrox:$PATH"
 
+ENV ROX_ROXCTL_IN_MAIN_IMAGE="true"
+
 COPY ./central-entrypoint.sh /stackrox/
 COPY ./bin/migrator /stackrox/
 COPY ./bin/central /stackrox/
