--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1022,6 +1022,7 @@ jobs:
             export HOSTNAME="${API_HOSTNAME}"
             export PORT="${API_PORT}"
             ./scripts/ci/create-webhookserver.sh kubectl
+            ./scripts/ci/create-scopedaccessserver.sh kubectl
             if [[ "${CIRCLE_BRANCH}" == "master" || -n "${CIRCLE_TAG}" ]]; then
               echo "On master, running all QA tests..."
               make -C qa-tests-backend test
@@ -1110,6 +1111,7 @@ jobs:
             export HOSTNAME="${API_HOSTNAME}"
             export PORT="${API_PORT}"
             ./scripts/ci/create-webhookserver.sh kubectl
+            ./scripts/ci/create-scopedaccessserver.sh kubectl
             if [[ "${CIRCLE_BRANCH}" == "master" || -n "${CIRCLE_TAG}" ]]; then
               echo "On master, running all QA tests..."
               make -C qa-tests-backend test
@@ -1502,6 +1504,7 @@ jobs:
               export HOSTNAME=localhost
               export PORT=${LOCAL_PORT}
               ./scripts/ci/create-webhookserver.sh oc
+              ./scripts/ci/create-scopedaccessserver.sh oc
               if [[ "${CIRCLE_BRANCH}" == "master" || -n "${CIRCLE_TAG}" ]]; then
                 echo "On master, running all QA tests..."
                 make -C qa-tests-backend test
@@ -1687,6 +1690,7 @@ jobs:
             export HOSTNAME=localhost
             export PORT=${LOCAL_PORT}
             ./scripts/ci/create-webhookserver.sh kubectl
+            ./scripts/ci/create-scopedaccessserver.sh kubectl
             make -C qa-tests-backend test
 
       - *storeQATestResults
