Flag for printing extended version information as JSON from roxctl (stackrox/rox#2593)

--- a/pkg/version/internal/BUILD.bazel
+++ b/pkg/version/internal/BUILD.bazel
@@ -9,5 +9,6 @@ go_library(
         "MainVersion": "{STABLE_MAIN_VERSION}",
         "CollectorVersion": "{STABLE_COLLECTOR_VERSION}",
         "ScannerVersion": "{STABLE_SCANNER_VERSION}",
+        "GitShortSha": "{STABLE_GIT_SHORT_SHA}",
     },
 )
