--- a/scripts/ci/scopedaccess/deployment/scopedaccess.yaml
+++ b/scripts/ci/scopedaccess/deployment/scopedaccess.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: authorization-plugin
+  namespace: stackrox
+imagePullSecrets:
+  - name: stackrox
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -43,11 +51,12 @@ spec:
               readOnly: true
           securityContext:
             readOnlyRootFilesystem: true
-            runAsUser: 1000310025
+            runAsUser: 1000
             capabilities:
               drop: ["ALL"]
       imagePullSecrets:
         - name: stackrox
+      serviceAccount: authorization-plugin
       volumes:
         - name: config-volume
           configMap:
