--- a/image/templates/kubernetes/helm/centralchart/templates/serviceaccount.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{if not .Values.gcpMarketplace}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -7,6 +8,7 @@ metadata:
     app.kubernetes.io/name: stackrox
 imagePullSecrets:
 - name: stackrox
+{{end}}
 ---
 {{if eq .Values.clusterType "OPENSHIFT_CLUSTER"}}
 kind: SecurityContextConstraints
