--- a/image/templates/kubernetes/helm/monitoringchart/templates/secret.yaml
+++ b/image/templates/kubernetes/helm/monitoringchart/templates/secret.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: {{.Values.namespace}}
   labels:
     app.kubernetes.io/name: stackrox
+{{if not .Values.gcpMarketplace}}
   annotations:
     "helm.sh/hook": "pre-install"
+{{end}}
 {{toYaml .Values.secrets}}
