--- a/image/templates/kubernetes/helm/centralchart/templates/default-tls-cert-secret.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/default-tls-cert-secret.yaml
@@ -7,7 +7,9 @@ metadata:
   namespace: {{.Values.namespace}}
   labels:
     app.kubernetes.io/name: stackrox
+{{if not .Values.gcpMarketplace}}
   annotations:
     "helm.sh/hook": "pre-install"
+{{end}}
 {{ toYaml .Values.secrets.defaulttlscert }}
 {{end}}
