--- a/image/templates/kubernetes/helm/centralchart/templates/tls-secret.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/tls-secret.yaml
@@ -4,8 +4,8 @@ type: Opaque
 metadata:
   name: central-tls
   namespace: {{.Values.namespace}}
-  labels:
-    app.kubernetes.io/name: stackrox
+{{if not .Values.gcpMarketplace}}
   annotations:
     "helm.sh/hook": "pre-install"
+{{end}}
 {{toYaml .Values.secrets.tls}}
