--- a/image/templates/kubernetes/helm/scannerchart/templates/tls-secret.yaml
+++ b/image/templates/kubernetes/helm/scannerchart/templates/tls-secret.yaml
@@ -4,6 +4,8 @@ type: Opaque
 metadata:
   name: scanner-tls
   namespace: {{.Values.namespace}}
+{{if not .Values.gcpMarketplace}}
   annotations:
     "helm.sh/hook": "pre-install"
+{{end}}
 {{toYaml .Values.secrets.tls}}
