--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -915,6 +915,7 @@ jobs:
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
       - ROX_SCOPED_ACCESS_CONTROL: true
+      - ROX_CLIENT_CA_AUTH: true
 
     steps:
       - checkout
@@ -1003,6 +1004,7 @@ jobs:
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SCOPED_ACCESS_CONTROL: true
+      - ROX_CLIENT_CA_AUTH: true
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
@@ -1093,6 +1095,7 @@ jobs:
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SCOPED_ACCESS_CONTROL: true
+      - ROX_CLIENT_CA_AUTH: true
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
@@ -1452,6 +1455,7 @@ jobs:
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SCOPED_ACCESS_CONTROL: true
+      - ROX_CLIENT_CA_AUTH: true
 
     steps:
       - checkout
@@ -1642,6 +1646,7 @@ jobs:
       - ROX_K8S_RBAC: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SCOPED_ACCESS_CONTROL: true
+      - ROX_CLIENT_CA_AUTH: true
 
     steps:
       - checkout
