--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -15,10 +15,10 @@ repositories {
     mavenCentral()
 }
 
-def grpcVersion = '1.13.1'
+def grpcVersion = '1.21.0'
 def protocVersion = '3.6.1'
 def protobufVersion = '3.6.1'
-def nettyTcNativeVersion = '2.0.7.Final'
+def nettyTcNativeVersion = '2.0.25.Final'
 
 protobuf {
     protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
@@ -63,7 +63,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.2.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.yaml', name: 'snakeyaml', version: '1.16'
-    testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.4.1'
+    compile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.4.1'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.6.1'
     testCompile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.5.3'
