--- a/image/templates/openshift/kubectl/sensor-rbac.yaml
+++ b/image/templates/openshift/kubectl/sensor-rbac.yaml
@@ -226,6 +226,7 @@ rules:
   apiGroups: [""]
   verbs:
   - create
+  - patch
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
